packages/java/src/main/resources/natives/macos-arm64/include/xberg.h


typedef struct XBERGChunkingConfig XBERGChunkingConfig;
typedef struct XBERGDiffOptions XBERGDiffOptions;
typedef struct XBERGDocumentMetadata XBERGDocumentMetadata;
typedef struct XBERGDocumentStructure XBERGDocumentStructure;
typedef struct XBERGEmbeddingConfig XBERGEmbeddingConfig;
typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGExtractionResult XBERGExtractionResult;
typedef struct XBERGFootnoteConfig XBERGFootnoteConfig;
typedef struct XBERGHeuristicsConfig XBERGHeuristicsConfig;
typedef struct XBERGKeywordConfig XBERGKeywordConfig;
typedef struct XBERGLlmConfig XBERGLlmConfig;
typedef struct XBERGMetaSchema XBERGMetaSchema;
typedef struct XBERGMetadata XBERGMetadata;
typedef struct XBERGMultidocInput XBERGMultidocInput;
typedef struct XBERGMultidocThresholds XBERGMultidocThresholds;
typedef struct XBERGOcrExtractionResult XBERGOcrExtractionResult;
typedef struct XBERGPaddleOcrConfig XBERGPaddleOcrConfig;
typedef struct XBERGPageClassificationConfig XBERGPageClassificationConfig;
typedef struct XBERGPageRange XBERGPageRange;
typedef struct XBERGPreset XBERGPreset;
typedef struct XBERGRedactionConfig XBERGRedactionConfig;
typedef struct XBERGRegistry XBERGRegistry;
typedef struct XBERGTokenCounter XBERGTokenCounter;
XBERGPageClassificationConfig *xberg_page_classification_config_from_json(const char *json);
void xberg_page_classification_config_free(XBERGPageClassificationConfig *ptr);
XBERGExtractionConfig *xberg_extraction_config_from_json(const char *json);
void xberg_extraction_config_free(XBERGExtractionConfig *ptr);
XBERGExtractInput *xberg_extract_input_from_json(const char *json);
void xberg_extract_input_free(XBERGExtractInput *ptr);
XBERGExtractionResult *xberg_extraction_result_from_json(const char *json);
void xberg_extraction_result_free(XBERGExtractionResult *ptr);
XBERGLlmConfig *xberg_llm_config_from_json(const char *json);
void xberg_llm_config_free(XBERGLlmConfig *ptr);
XBERGChunkingConfig *xberg_chunking_config_from_json(const char *json);
void xberg_chunking_config_free(XBERGChunkingConfig *ptr);
XBERGEmbeddingConfig *xberg_embedding_config_from_json(const char *json);
void xberg_embedding_config_free(XBERGEmbeddingConfig *ptr);
XBERGRedactionConfig *xberg_redaction_config_from_json(const char *json);
void xberg_redaction_config_free(XBERGRedactionConfig *ptr);
void xberg_token_counter_free(XBERGTokenCounter *ptr);
XBERGFootnoteConfig *xberg_footnote_config_from_json(const char *json);
void xberg_footnote_config_free(XBERGFootnoteConfig *ptr);
XBERGDocumentStructure *xberg_document_structure_from_json(const char *json);
void xberg_document_structure_free(XBERGDocumentStructure *ptr);
XBERGOcrExtractionResult *xberg_ocr_extraction_result_from_json(const char *json);
void xberg_ocr_extraction_result_free(XBERGOcrExtractionResult *ptr);
XBERGMetadata *xberg_metadata_from_json(const char *json);
void xberg_metadata_free(XBERGMetadata *ptr);
XBERGDiffOptions *xberg_diff_options_from_json(const char *json);
void xberg_diff_options_free(XBERGDiffOptions *ptr);
XBERGKeywordConfig *xberg_keyword_config_from_json(const char *json);
void xberg_keyword_config_free(XBERGKeywordConfig *ptr);
XBERGDocumentMetadata *xberg_document_metadata_from_json(const char *json);
void xberg_document_metadata_free(XBERGDocumentMetadata *ptr);
XBERGHeuristicsConfig *xberg_heuristics_config_from_json(const char *json);
void xberg_heuristics_config_free(XBERGHeuristicsConfig *ptr);
XBERGPageRange *xberg_page_range_from_json(const char *json);
void xberg_page_range_free(XBERGPageRange *ptr);
XBERGMultidocInput *xberg_multidoc_input_from_json(const char *json);
void xberg_multidoc_input_free(XBERGMultidocInput *ptr);
XBERGMultidocThresholds *xberg_multidoc_thresholds_from_json(const char *json);
void xberg_multidoc_thresholds_free(XBERGMultidocThresholds *ptr);
void xberg_meta_schema_free(XBERGMetaSchema *ptr);
void xberg_registry_free(XBERGRegistry *ptr);
XBERGPreset *xberg_preset_from_json(const char *json);
void xberg_preset_free(XBERGPreset *ptr);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_from_json(const char *json);
void xberg_paddle_ocr_config_free(XBERGPaddleOcrConfig *ptr);