packages/csharp/src/Xberg/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:446748155774867df28fecd60b1f51d93e20d7476cf9f2aad1cd588a1cf0950e
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Xberg;

internal static partial class NativeMethods
{
    private const string LibName = "xberg_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_backend_free")]
    internal static extern void EmbeddingBackendFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_backend_free")]
    internal static extern void LlmBackendFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_meta_schema_free")]
    internal static extern void MetaSchemaFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_backend_free")]
    internal static extern void OcrBackendFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_plugin_free")]
    internal static extern void PluginFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_post_processor_free")]
    internal static extern void PostProcessorFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_free")]
    internal static extern void RegistryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_renderer_free")]
    internal static extern void RendererFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_backend_free")]
    internal static extern void RerankerBackendFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_counter_free")]
    internal static extern void TokenCounterFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_validator_free")]
    internal static extern void ValidatorFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_plan_from_json")]
    internal static extern IntPtr ChunkPlanFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_plan_free")]
    internal static extern void ChunkPlanFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_config_from_json")]
    internal static extern IntPtr ChunkingConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_config_free")]
    internal static extern void ChunkingConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_signals_from_json")]
    internal static extern IntPtr ConfidenceSignalsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_signals_free")]
    internal static extern void ConfidenceSignalsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_weights_from_json")]
    internal static extern IntPtr ConfidenceWeightsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_weights_free")]
    internal static extern void ConfidenceWeightsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_diff_options_from_json")]
    internal static extern IntPtr DiffOptionsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_diff_options_free")]
    internal static extern void DiffOptionsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_metadata_from_json")]
    internal static extern IntPtr DocumentMetadataFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_metadata_free")]
    internal static extern void DocumentMetadataFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_from_json")]
    internal static extern IntPtr DocumentStructureFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_free")]
    internal static extern void DocumentStructureFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_config_from_json")]
    internal static extern IntPtr EmbeddingConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_config_free")]
    internal static extern void EmbeddingConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_from_json")]
    internal static extern IntPtr ExtractInputFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_free")]
    internal static extern void ExtractInputFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_from_json")]
    internal static extern IntPtr ExtractionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_free")]
    internal static extern void ExtractionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_from_json")]
    internal static extern IntPtr ExtractionResultFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_free")]
    internal static extern void ExtractionResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_from_json")]
    internal static extern IntPtr FootnoteConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_free")]
    internal static extern void FootnoteConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_from_json")]
    internal static extern IntPtr HeuristicsConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_free")]
    internal static extern void HeuristicsConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_config_from_json")]
    internal static extern IntPtr KeywordConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_config_free")]
    internal static extern void KeywordConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_from_json")]
    internal static extern IntPtr LlmConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_free")]
    internal static extern void LlmConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_from_json")]
    internal static extern IntPtr MetadataFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_free")]
    internal static extern void MetadataFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_input_from_json")]
    internal static extern IntPtr MultidocInputFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_input_free")]
    internal static extern void MultidocInputFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_thresholds_from_json")]
    internal static extern IntPtr MultidocThresholdsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_thresholds_free")]
    internal static extern void MultidocThresholdsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_extraction_result_from_json")]
    internal static extern IntPtr OcrExtractionResultFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_extraction_result_free")]
    internal static extern void OcrExtractionResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_from_json")]
    internal static extern IntPtr PaddleOcrConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_free")]
    internal static extern void PaddleOcrConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_classification_config_from_json")]
    internal static extern IntPtr PageClassificationConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_classification_config_free")]
    internal static extern void PageClassificationConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_from_json")]
    internal static extern IntPtr PageRangeFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_free")]
    internal static extern void PageRangeFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_from_json")]
    internal static extern IntPtr PresetFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_free")]
    internal static extern void PresetFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_from_json")]
    internal static extern IntPtr RedactionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_free")]
    internal static extern void RedactionConfigFree(IntPtr ptr);
